--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@preiskalkulator/tsconfig",
+  "name": "@durchrechnen/tsconfig",
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
