--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@preiskalkulator/api",
+  "name": "@durchrechnen/api",
   "scripts": {
     "dev": "TZ=UTC PORT=3003 bun run --hot src/index.ts",
     "db:pull": "drizzle-kit pull",
@@ -14,28 +14,30 @@
   },
   "dependencies": {
     "@date-fns/utc": "^2.1.0",
-    "@hono/trpc-server": "^0.3.4",
-    "@hono/zod-openapi": "^0.19.8",
-    "@hono/zod-validator": "^0.7.0",
-    "@scalar/hono-api-reference": "^0.9.4",
+    "@hono/trpc-server": "^0.4.0",
+    "@hono/zod-openapi": "^1.0.2",
+    "@hono/zod-validator": "^0.7.2",
+    "@scalar/hono-api-reference": "^0.9.12",
     "@sindresorhus/slugify": "^2.2.1",
-    "@trpc/server": "^11.4.1",
+    "@trpc/server": "^11.4.3",
+    "better-auth": "^1.3.3",
     "camelcase-keys": "^9.1.3",
     "date-fns": "^4.1.0",
-    "drizzle-orm": "^0.44.2",
-    "hono": "^4.7.11",
+    "drizzle-orm": "^0.44.3",
+    "drizzle-zod": "^0.8.2",
+    "hono": "^4.8.5",
     "hono-rate-limiter": "^0.4.2",
-    "jose": "^6.0.11",
+    "jose": "^6.0.12",
     "lru-cache": "^11.1.0",
     "nanoid": "^5.1.5",
     "pino": "^9.7.0",
     "postgres": "^3.4.7",
-    "resend": "^4.6.0",
-    "snakecase-keys": "^8.0.1",
+    "resend": "^4.7.0",
+    "snakecase-keys": "^9.0.2",
     "superjson": "^2.2.2",
     "uuid": "^11.1.0",
-    "zod": "^3.25.64",
-    "zod-openapi": "^4.2.4"
+    "zod": "^4.0.5",
+    "zod-openapi": "^5.2.0"
   },
   "devDependencies": {
     "@types/bun": "^1.2.19",
