--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@preiskalkulator/ui",
+  "name": "@durchrechnen/ui",
   "version": "0.0.0",
   "type": "module",
   "private": true,
@@ -15,16 +15,20 @@
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.2.1",
     "tw-animate-css": "^1.3.5",
-    "zod": "^4.0.5"
+    "zod": "^4.0.5",
+    "three": "^0.178.0",
+    "motion": "^12.23.7",
+    "@react-three/fiber": "^9.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
     "@turbo/gen": "^2.5.5",
     "@types/node": "^24.1.0",
+    "@types/three": "^0.178.1",
     "next-themes": "^0.4.6",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@preiskalkulator/tsconfig": "workspace:*",
+    "@durchrechnen/tsconfig": "workspace:*",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3"
   },
