refactor(auth.ts): Vereinfache die Benutzerrollen und aktiviere die Benutzeraktivität im Benutzerschema. refactor(api-keys.ts): Ändere das Format des generierten API-Schlüssels von "mid_" zu "dr_". refactor(auth.ts): Benenne die Funktion zur Überprüfung des Zugriffstokens in verifySession um und vereinfache die Logik. chore: Entferne nicht verwendete Cache- und Scope-Dateien zur Verbesserung der Codebasis.

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,6 +13,7 @@
     "./trpc/routers/_app": "./src/trpc/routers/_app.ts"
   },
   "dependencies": {
+    "@durchrechnen/utils": "workspace:*",
     "@date-fns/utc": "^2.1.0",
     "@hono/trpc-server": "^0.4.0",
     "@hono/zod-openapi": "^1.0.2",
