--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -4,8 +4,8 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "dev:desktop": "tauri dev",
+    "dev:web": "vite",
+    "dev": "tauri dev",
     "dev:ios": "tauri dev ios",
     "dev:android": "tauri dev android",
     "lint": "biome check .",
@@ -16,22 +16,27 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@durchrechnen/utils": "workspace:*",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-router": "^1.129.5",
+    "@tanstack/react-router-devtools": "^1.129.8",
     "@tanstack/react-table": "^8.21.3",
     "@tauri-apps/api": "^2.7.0",
+    "@tauri-apps/plugin-deep-link": "^2.4.1",
     "@tauri-apps/plugin-opener": "^2.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
+    "@tanstack/router-vite-plugin": "^1.129.8",
     "@tauri-apps/cli": "^2.7.1",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
