--- a/apps/native/src-tauri/Cargo.toml
+++ b/apps/native/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "durchrechnen"
 version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
+description = "Durchrechnen"
+authors = ["Codenade"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -22,4 +22,5 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tauri-plugin-deep-link = "2.4.1"
 
