--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@durchrechnen/utils": "workspace:*",
     "@durchrechnen/ui": "workspace:*",
     "lucide-react": "^0.525.0",
     "next": "^15.4.3",
