--- a/biome.json
+++ b/biome.json
@@ -22,6 +22,9 @@
       "suspicious": {
         "noExplicitAny": "off",
         "noArrayIndexKey": "off"
+      },
+      "security": {
+        "noBlankTarget": "off"
       }
     }
   },
