--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "typecheck": "turbo run typecheck"
   },
   "devDependencies": {
     "@biomejs/biome": "2.1.2",
@@ -16,7 +15,7 @@
   "engines": {
     "node": ">=22.12.0"
   },
-  "packageManager": "bun@1.2.17",
+  "packageManager": "bun@1.2.19",
   "workspaces": [
     "apps/*",
     "packages/*"
