--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -17,7 +17,7 @@
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
     "jsx": "react-jsx",
-    "jsxImportSource": "react",
+    "jsxImportSource": "hono/jsx",
     "baseUrl": ".",
     "paths": {
       "@api/*": ["src/*"]
@@ -25,5 +25,5 @@
     "types": ["bun-types"]
   },
   "exclude": ["node_modules"],
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
