feat(auth): Implementiere OAuth-Deep-Link-Handling für Tauri-Apps und verbessere die Fehlerbehandlung bei der Anmeldung. refactor(auth): Entferne veraltete Middleware und optimiere die Authentifizierungslogik. fix(api): Füge CORS-Header für die Plattform hinzu und verbessere die API-URL-Generierung. style(components): Verbessere die Formatierung und Struktur der OAuth-Komponenten. chore(dependencies): Aktualisiere die Abhängigkeiten für Tauri-Plugins und verbessere die Umgebungsvariablenverwaltung.

--- a/biome.json
+++ b/biome.json
@@ -24,7 +24,8 @@
         "noArrayIndexKey": "off"
       },
       "security": {
-        "noBlankTarget": "off"
+        "noBlankTarget": "off",
+        "noDangerouslySetInnerHtml": "off"
       }
     }
   },
