--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -25,7 +25,9 @@
     "@tanstack/react-table": "^8.21.3",
     "@tauri-apps/api": "^2.7.0",
     "@tauri-apps/plugin-deep-link": "^2.4.1",
+    "@tauri-apps/plugin-http": "^2.5.1",
     "@tauri-apps/plugin-opener": "^2.4.0",
+    "@tauri-apps/plugin-os": "^2.3.0",
     "better-auth": "^1.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
