--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "next-themes": "^0.4.6",
     "@radix-ui/react-slot": "^1.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
