fix(linting): Konfiguriere Biome Linter für Monorepo und behebe alle Code-Qualitätsprobleme
- Konfiguriere hierarchische Biome-Setup mit Root- und Web-spezifischen Einstellungen
- Ignoriere Build-Verzeichnisse (.next, dist, build) korrekt über VCS-Integration
- Behebe 9 Button-Type-Linting-Fehler in dashboard-client.tsx (type="button" hinzugefügt)
- Entferne unused variables in API seed-complete.ts mit underscore-Prefix
- Aktiviere automatische Formatierung für konsistente Code-Struktur
- Alle Packages (API, Utils, UI, Web) laufen nun sauber durch Biome-Linting

--- a/biome.json
+++ b/biome.json
@@ -4,6 +4,9 @@
     "includes": ["**/*.js", "**/*.ts", "**/*.jsx", "**/*.tsx", "**/*.json"],
     "ignoreUnknown": true
   },
+  "vcs": {
+    "useIgnoreFile": true
+  },
   "linter": {
     "enabled": true,
     "rules": {
@@ -22,6 +25,9 @@
       "suspicious": {
         "noExplicitAny": "off",
         "noArrayIndexKey": "off"
+      },
+      "complexity": {
+        "useLiteralKeys": "off"
       },
       "security": {
         "noBlankTarget": "off",
