--- a/turbo.json
+++ b/turbo.json
@@ -10,6 +10,12 @@
     "lint": {
       "dependsOn": ["^lint"]
     },
+    "lint:fix": {
+      "dependsOn": ["^lint:fix"]
+    },
+    "format": {
+      "dependsOn": ["^format"]
+    },
     "typecheck": {
       "dependsOn": ["^typecheck"]
     },
