--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,9 +4,12 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "lint": "eslint . --max-warnings 0"
+    "lint": "biome check .",
+    "lint:fix": "biome check --write .",
+    "format": "biome format --write ."
   },
   "dependencies": {
+    "next-themes": "^0.4.6",
     "@radix-ui/react-slot": "^1.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
