feat(trpc): Vollständige tRPC API-Grundlage mit Enterprise-Architektur
- Implementiere umfassende tRPC-Router für Services, Customers und Quotations
- Füge Enterprise-grade Logging-Middleware mit strukturierten Metadaten hinzu
- Integriere geteilte LogLayer-Infrastruktur mit ordnungsgemäßem Plugin-System
- Implementiere SQL-Performance-Optimierungen und ordnungsgemäße Fehlerbehandlung
- Stelle Type-Safety mit TRPCError und Zod-Validierungsschemas sicher
- Füge umfassende CRUD-Operationen mit Geschäftslogik-Validierung hinzu
- Behebe LogLayer-Plugin-Importe und Type-Safety-Probleme

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "motion": "^12.23.11",
     "@durchrechnen/utils": "workspace:*",
     "@durchrechnen/ui": "workspace:*",
     "lucide-react": "^0.525.0",
