--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
-    "format": "biome format --write ."
+    "format": "biome format --write .",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "next-themes": "^0.4.6",
@@ -20,7 +21,7 @@
     "tw-animate-css": "^1.3.5",
     "zod": "^4.0.5",
     "three": "^0.178.0",
-    "motion": "^12.23.9",
+    "motion": "^12.23.11",
     "@react-three/fiber": "^9.2.0"
   },
   "devDependencies": {
