--- a/.github/workflows/neon-branch-workflow.yml
+++ b/.github/workflows/neon-branch-workflow.yml
@@ -42,6 +42,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
+          fetch-depth: 0
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
@@ -61,6 +62,15 @@ jobs:
       - name: Install Dependencies
         working-directory: ./apps/api
         run: bun install
+
+      - name: Debug Migration Files
+        working-directory: ./apps/api
+        run: |
+          echo "Current directory: $(pwd)"
+          echo "Migration files:"
+          ls -la migrations/ || echo "migrations directory not found"
+          echo "Working directory contents:"
+          ls -la
 
       - name: Run Migrations on Preview Branch
         working-directory: ./apps/api
