chore(deploy-preview.yml): Füge VERCEL_TOKEN zur Umgebungsvariablen hinzu, um die Bereitstellung zu ermöglichen.

--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -43,6 +43,7 @@ jobs:
         uses: zentered/vercel-preview-url@v1.1.9
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
         with:
           vercel_project_id: ${{ secrets.VERCEL_PROJECT_ID }}
 
