chore(deploy-preview.yml): Vereinfache den Migrationsbefehl durch Verwendung des working-directory-Parameters.

--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -51,9 +51,8 @@ jobs:
           echo "DATABASE_URL=${{ steps.create-branch.outputs.db_url_with_pooler }}" >> "$GITHUB_ENV"
 
       - name: Run Migrations on Preview Branch
-        run: |
-          cd apps/api
-          bun run db:migrate
+        working-directory: ./apps/api
+        run: bun run db:migrate
 
       - id: deploy
         uses: superfly/fly-pr-review-apps@1.2.1
