feat(deploy-preview): Füge den Pfad zur API-Anwendung im Deploy-Workflow hinzu. Dies ermöglicht eine gezielte Bereitstellung der API während der Vorschau.

--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -78,6 +78,7 @@ jobs:
       - id: deploy
         uses: superfly/fly-pr-review-apps@1.2.1
         with:
+          path: ./apps/api
           secrets: |
             DATABASE_URL=$DATABASE_URL
             GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
