feat(deploy-preview): Füge einen Namen für die PR-Durchrechnungs-API hinzu und stelle sicher, dass der Pfad korrekt ist.

--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -78,7 +78,8 @@ jobs:
       - id: deploy
         uses: superfly/fly-pr-review-apps@1.2.1
         with:
-          path: ./apps/api
+          path: ./apps/api  
+          name: pr-${{ github.event.number }}-durchrechnen-api
           secrets: |
             DATABASE_URL=$DATABASE_URL
             GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
