--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -78,8 +78,9 @@ jobs:
       - id: deploy
         uses: superfly/fly-pr-review-apps@1.2.1
         with:
-          path: ./apps/api  
           name: pr-${{ github.event.number }}-durchrechnen-api
+          config: apps/api/fly.toml
+          dockerfile: apps/api/Dockerfile
           secrets: |
             DATABASE_URL=$DATABASE_URL
             GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
