--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -79,7 +79,7 @@ jobs:
         uses: superfly/fly-pr-review-apps@1.2.1
         with:
           name: pr-${{ github.event.number }}-durchrechnen-api
-          config: apps/api/fly.toml
+          path: apps/api
           dockerfile: apps/api/Dockerfile
           secrets: |
             DATABASE_URL=$DATABASE_URL
