chore(deploy-preview): Aktualisiere die GitHub Actions-Konfiguration für die Bereitstellungsvorschau, um die Verwendung von fly.toml anstelle von Dockerfile zu ermöglichen. feat(fly.toml): Füge Dockerfile- und Ignorefile-Pfade zur Fly-Konfiguration hinzu.

--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -79,8 +79,7 @@ jobs:
         uses: superfly/fly-pr-review-apps@1.2.1
         with:
           name: pr-${{ github.event.number }}-durchrechnen-api
-          path: apps/api
-          dockerfile: apps/api/Dockerfile
+          config: apps/api/fly.toml
           secrets: |
             DATABASE_URL=$DATABASE_URL
             GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
