--- a/apps/api/fly.toml
+++ b/apps/api/fly.toml
@@ -2,8 +2,8 @@ app = 'durchrechnen-api'
 primary_region = 'fra'
 
 [build]
-  dockerfile = "apps/api/Dockerfile"
-  ignorefile = "apps/api/.dockerignore"
+  dockerfile = "Dockerfile"
+  ignorefile = ".dockerignore"
 
 [env]
   PORT = '8080'
