--- a/apps/api/fly.toml
+++ b/apps/api/fly.toml
@@ -2,6 +2,8 @@ app = 'durchrechnen-api'
 primary_region = 'fra'
 
 [build]
+  dockerfile = "Dockerfile"
+  ignorefile = ".dockerignore"
 
 [env]
   PORT = '8080'
