--- a/.github/workflows/cleanup-preview.yml
+++ b/.github/workflows/cleanup-preview.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Delete Fly app
         uses: superfly/fly-pr-review-apps@1.2.0
+        with:
+          name: pr-${{ github.event.number }}-durchrechnen-api
 
       - name: Delete Neon Branch
         uses: neondatabase/delete-branch-action@v3.1.3
